tests/ui/invalid-default-expression.stderr
error[E0425]: cannot find function `this_function_does_not_exist` in this scope
 --> tests/ui/invalid-default-expression.rs:3:10
  |
3 | #[derive(TypeStateBuilder)]
  |          ^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `TypeStateBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
